--- a/appspec.yaml
+++ b/appspec.yaml
@@ -5,6 +5,6 @@ Resources:
       Properties:
         TaskDefinition: "arn:aws:ecs:us-east-1:111271881861:task-definition/Product-service-td:2"
         LoadBalancerInfo:
-          ContainerName: "ProductService-Microservice-container-877629"
+          ContainerName: "productservice"
           ContainerPort: "8083"
         PlatformVersion: "LATEST"
