--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ server.error.include-stacktrace=never
 
 spring.h2.console.path=/db
 #authservice.client.url=http://34.207.94.208:8082
-authservice.client.url=http://localhost:8082
+authservice.client.url=http://online-shopping-microservices-lb-628064474.us-east-1.elb.amazonaws.com:8082
 authservice.client.name=userService
 spring.kafka.consumer.bootstrap-servers= localhost:9092
 spring.kafka.producer.bootstrap-servers= localhost:9092
